--- a/src/app/pages/user/components/user-footer/user-footer.component.html
+++ b/src/app/pages/user/components/user-footer/user-footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer mt-40 studentFooter">
+<footer class="footer userStudentCourse mt-40 studentFooter">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
