--- a/src/app/pages/admin/admin-students-all-courses/admin-students-all-courses.component.html
+++ b/src/app/pages/admin/admin-students-all-courses/admin-students-all-courses.component.html
@@ -27,7 +27,7 @@
             [infiniteScrollDisabled]="lastPage || disableScroll">
             <div class="col-md-12">
                 <div class="table-responsive mt-30">
-                    <p>All available result {{totalStudents}}, showing result {{enrollmentStudentsArray.length}} 
+                    <p>All available result {{totalStudents}}, showing result {{enrollmentStudentsArray.length}}
                         <a
                         *ngIf="enrollmentStudentsArray.length"
                             style="color: blue;"
@@ -59,13 +59,17 @@
                                 <td class="text-center">{{student.chapter_fee}}</td>
                                 <td class="text-center">
                                     <a *ngIf="!student.is_active_subscription"
-                                        (click)="onApproveClick(student,search.value)" title="Approved"
+                                        (click)="onApproveClick(student,search.value)" title="{{'Approved'|translate}}"
                                         class="accept-btn mx-2"><i class="uil uil-check"></i>
-                                        {{"Approve" |translate}}</a>
+                                        </a>
                                     <a *ngIf="student.is_active_subscription"
-                                        (click)="onRejectClick(student,search.value)" title="Reject"
+                                        (click)="onRejectClick(student,search.value)" title="{{'Reject'|translate}}"
                                         class="reject-btn  mx-2"><i class="uil uil-times"></i>
-                                        {{"Reject" |translate}}</a>
+                                       </a>
+<!-- deleteEnrollment request -->
+                                   <a title="{{'delete enrollment request'|translate}}"
+                                       class="reject-btn mx-2"><i class="uil delete-btn"></i>
+                                      </a>
                                 </td>
                             </tr>
 
