--- a/src/app/pages/user/user-all-courses/user-all-courses.component.html
+++ b/src/app/pages/user/user-all-courses/user-all-courses.component.html
@@ -3,9 +3,47 @@
         <div class="row">
             <div class="col-lg-12">
                 <h2 class="st_title"><i class="uil uil-apps"></i> {{ 'All Courses' | translate}}</h2>
+
+    <form class="StudentSearch">
+      <input class="col-12 col-sm-6 form-control" type="text" placeholder="{{'Search'|translate}}" aria-label="Search">
+
+
+        <select value="all" name="search_param" id="search_param" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+            <option value="all" disabled>{{"Search by"|translate}}</option>
+            <option value="instructor">{{"instructor"|translate}}</option>
+            <option value="subject">{{"subject Name"|translate}}</option>
+        </select>
+        <div class="formButtn">
+
+    <button class="btn  btn-primary" type="submit" >{{"Search"|translate}}</button>
+</div>
+  </form>
+
             </div>
         </div>
-        <div class="section3125 mt-30">
+        <h5 class="icon-filter" (click)="onSearchClick()">filter</h5>
+        <div class="filter showFilter">
+          <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+            <li class="nav-item">
+              <a class="nav-link " id="pills-grade-tab" data-toggle="pill" href="#pills-grade" role="tab" aria-controls="pills-grade" aria-selected="true">{{"grade"|translate}}</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="pills-lang-tab" data-toggle="pill" href="#pills-lang" role="tab" aria-controls="pills-lang" aria-selected="false">{{"language"|translate}}</a>
+            </li>
+          </ul>
+          <div class="tab-content" id="pills-tabContent">
+            <div class="tab-pane fade " id="pills-grade" role="tabpanel" aria-labelledby="pills-grade-tab">
+              <label class="radio-inline"><input type="radio" name="optradio" checked>{{"first"|translate}}</label>
+              <label class="radio-inline"><input type="radio" name="optradio">{{"Second"|translate}}</label>
+            </div>
+            <div class="tab-pane fade" id="pills-lang" role="tabpanel" aria-labelledby="pills-lang-tab">
+              <label class="radio-inline"><input type="radio" name="optradio" checked>{{"English"|translate}}</label>
+              <label class="radio-inline"><input type="radio" name="optradio">{{"arabic"|translate}}</label>
+              <label class="radio-inline"><input type="radio" name="optradio">{{"both"|translate}}</label>
+            </div>
+          </div>
+        </div>
+        <div class="section3125  mt-10">
             <div class="row" infiniteScroll [infiniteScrollDistance]="1" (scrolled)="onScroll()"
                 [infiniteScrollDisabled]="lastPage">
 
