--- a/src/assets/css/fonts/demo/style.css
+++ b/src/assets/css/fonts/demo/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?tjlc0d');
-  src:  url('fonts/icomoon.eot?tjlc0d#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?tjlc0d') format('truetype'),
-    url('fonts/icomoon.woff?tjlc0d') format('woff'),
-    url('fonts/icomoon.svg?tjlc0d#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?n1lnd1');
+  src:  url('fonts/icomoon.eot?n1lnd1#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?n1lnd1') format('truetype'),
+    url('fonts/icomoon.woff?n1lnd1') format('woff'),
+    url('fonts/icomoon.svg?n1lnd1#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-keyboard_arrow_right:before {
+  content: "\e901";
+}
+.icon-keyboard_arrow_down:before {
+  content: "\e902";
+}
 .icon-user-x:before {
   content: "\e900";
 }
@@ -42,4 +48,13 @@
 }
 .icon-notification:before {
   content: "\ea08";
+}
+.icon-users:before {
+  content: "\e972";
+}
+.icon-bin2:before {
+  content: "\e9ad";
+}
+.icon-filter:before {
+  content: "\ea5b";
 }
