--- a/src/assets/css/fonts/demo/style.css
+++ b/src/assets/css/fonts/demo/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?n1lnd1');
-  src:  url('fonts/icomoon.eot?n1lnd1#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?n1lnd1') format('truetype'),
-    url('fonts/icomoon.woff?n1lnd1') format('woff'),
-    url('fonts/icomoon.svg?n1lnd1#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?ne43jh');
+  src:  url('fonts/icomoon.eot?ne43jh#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?ne43jh') format('truetype'),
+    url('fonts/icomoon.woff?ne43jh') format('woff'),
+    url('fonts/icomoon.svg?ne43jh#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-check-circle:before {
+  content: "\e903";
+}
+.icon-check-circle1:before {
+  content: "\e904";
+}
+.icon-close-solid:before {
+  content: "\e906";
+}
+.icon-checkmark-outline:before {
+  content: "\e905";
+}
 .icon-keyboard_arrow_right:before {
   content: "\e901";
 }
@@ -48,6 +60,12 @@
 }
 .icon-notification:before {
   content: "\ea08";
+}
+.icon-library:before {
+  content: "\e921";
+}
+.icon-credit-card:before {
+  content: "\e93f";
 }
 .icon-users:before {
   content: "\e972";
