--- a/src/app/pages/admin/advanced-search-payment-student/advanced-search-payment-student.component.html
+++ b/src/app/pages/admin/advanced-search-payment-student/advanced-search-payment-student.component.html
@@ -72,7 +72,7 @@
             </select>
           </div>
         </div>
-      
+
 
         <div class="form-group col-sm-6">
           <div class="SearchBox">
@@ -152,13 +152,17 @@
                 <td class="text-center">{{student.chapter_fee}}</td>
                 <td class="text-center">
                   <a *ngIf="!student.is_active_subscription" (click)="onApproveClick(student,'')" title="Approved"
-                    class="accept-btn mx-2"><i class="uil uil-check"></i>
-                    {{"Approve" |translate}}</a>
+                    class="accept-btn noborder mx-2"><i class="uil uil-check"></i>
+                   </a>
                   <!-- search.value -->
 
                   <a *ngIf="student.is_active_subscription" (click)="onRejectClick(student,'')" title="Reject"
-                    class="reject-btn  mx-2"><i class="uil uil-times"></i>
-                    {{"Reject" |translate}}</a>
+                    class="reject-btn noborder mx-2"><i class="uil uil-times"></i>
+                  </a>
+
+                    <a title="{{'delete enrollment request'|translate}}"
+                    class="reject-btn noborder mx-2"><i class="uil delete-btn"></i>
+                   </a>
                 </td>
               </tr>
 
