--- a/src/app/pages/admin/advanced-search-payment-student/advanced-search-payment-student.component.html
+++ b/src/app/pages/admin/advanced-search-payment-student/advanced-search-payment-student.component.html
@@ -151,16 +151,16 @@
                 <td class="text-center">{{student.instrcutor_name}}</td>
                 <td class="text-center">{{student.chapter_fee}}</td>
                 <td class="text-center">
-                  <a *ngIf="!student.is_active_subscription" (click)="onApproveClick(student,'')" title="Approved"
+                  <a *ngIf="!student.is_active_subscription" (click)="onApproveClick(student,'')" title="{{'Approve' | translate}}"
                     class="accept-btn noborder mx-2"><i class="uil uil-check"></i>
                    </a>
                   <!-- search.value -->
 
-                  <a *ngIf="student.is_active_subscription" (click)="onRejectClick(student,'')" title="Reject"
+                  <a *ngIf="student.is_active_subscription" (click)="onRejectClick(student,'')" title="{{'Reject' | translate}}"
                     class="reject-btn noborder mx-2"><i class="uil uil-times"></i>
                   </a>
 
-                    <a title="{{'delete enrollment request'|translate}}"
+                    <a (click)="onDeleteClick(student,'')" title="{{'delete enrollment request'|translate}}"
                     class="reject-btn noborder mx-2"><i class="uil delete-btn"></i>
                    </a>
                 </td>
